Reworked Houndmaster AI, included config option to control Houndmaster summon cooldown, and made scavengers take less damage from non-players and non-arrows.